# foobot2

./: .dockerignore  .env.dist  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Dockerfile.aarch64  README.md  Rocket.toml  build.rs  docker-compose.yaml
migrations/2021-04-25-070029_create_users/: up.sql
migrations/2021-05-06-092111_create_channel/: down.sql  up.sql
migrations/2021-05-10-055423_create_commands/: down.sql  up.sql
migrations/2021-05-12-085654_create_user_data/: down.sql  up.sql
migrations/2021-05-12-150507_create_web_sessions/: down.sql  up.sql
migrations/2021-05-13-144004_create_web_session_username/: down.sql  up.sql
migrations/2021-05-19-065112_user_data_fix_primary/: down.sql  up.sql
migrations/2021-05-19-075434_command_cooldown/: down.sql  up.sql
migrations/2021-05-24-085611_cascade_delete_user/: down.sql  up.sql
migrations/2021-05-26-042410_cascade_delete_web_session/: down.sql  up.sql
migrations/2021-11-16-145902_create_auth/: down.sql  up.sql
migrations/2021-11-20-150250_add_irc_column/: down.sql  up.sql
migrations/2022-01-15-120424_create_eventsub_triggers/: down.sql  up.sql
migrations/2022-01-15-154448_add_eventsub_condition/: down.sql  up.sql
migrations/2022-01-29-121208_create_prefixes/: down.sql  up.sql
migrations/2022-02-07-162457_fix_eventsub_unique/: down.sql  up.sql
migrations/2022-02-08-061026_create_eventsub_id/: down.sql  up.sql
migrations/2022-02-25-143926_create_user_addr/: down.sql  up.sql
migrations/2022-03-01-051317_create_mirror_connections/: down.sql  up.sql
migrations/2022-03-02-070739_create_telegram_id/: down.sql  up.sql
migrations/2022-03-05-181048_create_command_triggers/: down.sql  up.sql
migrations/2022-03-11-085945_create_filters/: down.sql  up.sql
migrations/2022-10-15-082701_add_matrix/: down.sql  up.sql
migrations/2023-03-15-184125_add_command_mode/: down.sql  up.sql
migrations/2023-05-21-181158_add_eventsub_mode/: down.sql  up.sql
migrations/2023-05-31-161424_add_hebi_data/: down.sql  up.sql
migrations/2023-08-08-184928_add_geohub_links/: down.sql  up.sql
proto/: foobot.proto
src/: command_handler.rs  database.rs  main.rs  platform.rs  rpc.rs  web.rs
src/api/: channels.rs  error.rs  mod.rs  state.rs  webhooks.rs
src/api/authentication/: api.rs  flow.rs  mod.rs  schema.rs
src/command_handler/: discord_api.rs  error.rs  eval.rs  finnhub_api.rs  geohub.rs  inquiry_helper.rs  lastfm_api.rs  lingva_api.rs  mod.rs  owm_api.rs  platform_handler.rs  spotify_api.rs  trivia.rs  twitch_api.rs  ukraine_alert.rs
src/command_handler/commands/: cmd.rs  custom.rs  debug.rs  hebi.rs  mod.rs  ping.rs  reload.rs  shell.rs  twitch_eventsub.rs  whoami.rs
src/command_handler/commands/builtin/: cmd.rs  debug.rs  mod.rs  ping.rs  userinfo.rs
src/command_handler/commands/geohub/: args.rs  client.rs  mod.rs
src/command_handler/eval/: context.rs  db.rs  http.rs  mod.rs  storage.rs  utils.rs
src/command_handler/inquiry_helper/: forsencode.rs  hebi.rs  mod.rs  mu.rs  script.rs  twitch_timeout.rs
src/command_handler/twitch_api/: eventsub.rs  helix.rs  mod.rs  model.rs
src/command_handler/twitch_api/eventsub/: conditions.rs  events.rs  mod.rs
src/database/: credentials.rs  mod.rs  models.rs  schema.rs
src/platform/: connector.rs  discord.rs  irc.rs  local.rs  minecraft.rs  mod.rs  telegram.rs  twitch.rs
src/web/: api.rs  authenticate.rs  channel.rs  errors.rs  mod.rs  profile.rs  template_context.rs  webhooks.rs
static/: credits.md
static/css/: modal.css
static/js/: commands.js  modal.js
templates/: authenticate.hbs  channels.hbs  commands.hbs  index.hbs  layout.hbs  profile.hbs
templates/errors/: 404.hbs
web/: .gitignore  index.html  package-lock.json  package.json  rollup.config.js  vite.config.ts
web/public/: global.css  index.html
web/src/: App.svelte  Modal.svelte  common.ts  global.d.ts
web/src/pages/: _fallback.svelte  _layout.svelte  index.svelte  profile.svelte
web/src/pages/channels/: index.svelte
web/src/pages/channels/[channel_id]/: _layout.svelte  commands.svelte  eventsub.svelte  filters.svelte  index.svelte
web/src/pages/docs/: _layout.svelte  commands.md  index.svelte
web/src/pages/profile/: _InputModal.svelte  index.svelte
