[package]
edition = "2021"
name = "foobot2"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

diesel = { git = "https://github.com/diesel-rs/diesel.git", features = [
    "mysql",
    "r2d2",
    "serde_json",
] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel.git" }

async-trait = "0.1.56"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
#async-recursion = "0.3"

tracing = "0.1.35"
tracing-subscriber = "0.3.14"

http = "0.2.8"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"

twilight-cache-inmemory = "0.11.0"
twilight-gateway = "0.11.0"
twilight-http = "0.11.0"
twilight-model = "0.11.0"
twilight-util = { version = "0.11.0", features = ["permission-calculator"] }
twitch-irc = { version = "4.0.0", default-features = false, features = [
    "transport-tcp-rustls-webpki-roots",
    "refreshing-token-rustls-webpki-roots",
] }

frankenstein = { version = "0.18.0", default-features = false, features = [
    "async-http-client",
] }

minecraft-client-rs = "0.1.0"

handlebars = "4.3.1"

passwords = "3.1.9"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = [
    "rapidoc",
] }

anyhow = "1.0.58"
thiserror = "1.0.31"

rand = "0.8.5"

hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.2"

dashmap = "5.3.4"

chrono = "0.4.19"

irc = { version = "0.15.0", default-features = false, features = [
    "tls-rust",
    "ctcp",
    "toml_config",
] }

once_cell = "1.12.0"
prometheus = { version = "0.13.1", features = ["process"] }
rocket_prometheus = "0.10.0-rc.3"

rhai = { version = "1.8.0", features = ["sync", "serde"] }

prost = "0.10.4"
tonic = { version = "0.7.2", features = ["tls", "compression"] }

regex = "1.5.6"

connector-schema = { git = "https://git.hyron.dev/foobot/foobot-chat-connector" }
foobot-permissions-proto = { git = "https://git.hyron.dev/foobot/foobot-permissions-handler" }
futures-util = "0.3.21"
redis = { version = "0.21.5", features = ["tokio-comp"] }

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost", "compression"] }
