[package]
name = "foobot2"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

diesel = { version = "2.0", features = ["mysql", "r2d2", "serde_json"] }
diesel_migrations = "2.0"

tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
async-trait = "0.1.57"

tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

reqwest = { version = "0.11.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
http = "0.2.8"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

twitch-irc = { version = "4.1.0", default-features = false, features = [
    "transport-tcp-rustls-webpki-roots",
    "refreshing-token-rustls-webpki-roots",
] }
twilight-http = "0.13.2"
twilight-model = "0.13.5"
twilight-gateway = "0.13.3"
twilight-cache-inmemory = "0.13.0"
twilight-util = { version = "0.13.3", features = ["permission-calculator"] }

minecraft-client-rs = "0.1.3"

handlebars = "4.3.4"

axum = { version = "0.6.18", features = ["macros"] }
axum-extra = { version = "0.7.4", features = ["cookie-private"] }
tower-http = { version = "0.4.0", features = ["trace", "fs"] }

passwords = "3.1.9"

anyhow = "1.0.65"
thiserror = "1.0.37"

rand = "0.8.5"

hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"

dashmap = "5.4.0"
chrono = "0.4.22"

irc = { version = "0.15.0", default-features = false, features = [
    "tls-rust",
    "ctcp",
    "toml_config",
] }

tonic = { version = "0.8.2", features = ["tls"] }
prost = "0.11.0"

regex = "1.6.0"
enum_dispatch = "0.3.8"
strum = { version = "0.24.1", features = ["derive"] }

async-nats = "0.21.0"
connector-schema = { git = "https://git.hyron.dev/foobot/foobot-chat-connector", features = [
    "json_schema",
] }

hebi = { git = "https://github.com/jprochazk/hebi", features = [
    "serde",
], branch = "v2" }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
tracing-opentelemetry = "0.18.0"
arc-swap = "1.6.0"
tempfile = "3.5.0"


[build-dependencies]
tonic-build = { version = "0.8.2", features = ["prost"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
